buttons visible on black quick fix

--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -191,14 +191,18 @@
     content: '•';
     text-align: center;
 
-    opacity: .25;
-    color: black;
+    opacity: .5;
+    color: #222;
+}
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 .slick-dots li.slick-active button:before
 {
-    opacity: .75;
-    color: black;
+    opacity: 1;
+    color: #222;
 }
+
+
+
